# tailscale-hello

./: Cargo.toml  Dockerfile  Procfile  README.md  fly.toml  package-lock.json  package.json  start.sh
src/: main.rs  server.rs  tls.rs
static/: app.css
templates/: index.html
