[package]
name = "tailscale-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["tracing", "http2", "macros"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = { version = "0.24.1", features = ["http2"] }
mime_guess = "2"
rust-embed = { version = "8", features = ["axum"] }
rustls = "0.21.6"
tailscale-localapi = "0.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
